Fix memory leak in QGestureRecognizer::unregisterRecognizer()

Add immediate deletion for orphaned QGestureRecognizer instances.
Skipped deletion if recognizer is obsolete or already marked for
cleanup.

Fixes: QTBUG-123585
Change-Id: Idc84f333ce247c5eb12850f672b63ae8347ed993
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 8e3221cb8a56ae52896643c211588297639ef382)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 849b3af79ebbcb18b5d4954aacd630387f259221)